--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,27 @@
-name: Create Archive
-on: [release]
+name: hm3-automation CI
+
+on:
+  push:
+    tags:
+      - v*
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Archive Release
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'zip'
-        filename: 'module.zip'
-        exclusions: '*.git* /*node_modules/* .editorconfig'
-
-    - name: Upload Release
+    - uses: actions/checkout@v2
+    - name: Update Version
+      shell: bash
+      id: set-version
+      run: echo "::set-output name=version::$(node ./.github/workflows/set-version.js ${{ github.ref }})"
+    - run: zip -r ./module.zip module.json LICENSE README.md lang/ templates/ scripts/ packs/ icons
+    - name: Create Release
+      id: create_versioned_release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "module.zip"
-        token: ${{ secrets.GITHUB_TOKEN }}        
+        allowUpdates: true
+        name: Release ${{ steps.set-version.outputs.version }}
+        draft: false
+        prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: './module.json,./module.zip'
