--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
       shell: bash
       id: set-version
       run: echo "::set-output name=version::$(node ./.github/workflows/set-version.js ${{ github.ref }})"
+    - run: npm install --save-dev @league-of-foundry-developers/foundry-vtt-types@0.8.9-10
+    - run: tsc
     - run: zip -r ./module.zip module.json LICENSE README.md lang/ templates/ scripts/ packs/ icons
     - name: Create Release
       id: create_versioned_release
