--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -2,9 +2,8 @@ name: hm3-automation CI
 
 on:
   push:
-    tags:
-      - v*
-
+    branches:
+      - 'feature/**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,8 +11,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Update Version
       shell: bash
-      id: set-version
-      run: echo "::set-output name=version::$(node ./.github/workflows/set-version.js ${{ github.ref }})"
+      id: set-beta-manifest
+      run: echo "::set-output name=version::$(node ./.github/workflows/set-beta-manifest.js)"
     - name: install node v16
       uses: actions/setup-node@v1
       with:
@@ -24,13 +23,14 @@ jobs:
       run: tsc
     - name: Create module
       run: zip -r ./module.zip module.json LICENSE README.md lang/ templates/ scripts/ packs/ icons
-    - name: Create Release
-      id: create_versioned_release
+    - name: Create Beta Release
+      id: create_beta_release
       uses: ncipollo/release-action@v1
       with:
         allowUpdates: true
-        name: Release ${{ steps.set-version.outputs.version }}
+        name: Beta
         draft: false
-        prerelease: false
+        prerelease: true
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: './module.json,./module.zip'
+        tag: beta
