--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -3,7 +3,7 @@ name: hm3-automation CI
 on:
   push:
     branches:
-      - 'feature/**'
+      - 'release/**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
     - name: Update Version
       shell: bash
       id: set-beta-manifest
-      run: echo "::set-output name=version::$(node ./.github/workflows/set-beta-manifest.js)"
+      run: echo "::set-output name=version::$(node ./.github/workflows/beta-update-manifest.js ${{ github.ref }})"
     - name: install node v16
       uses: actions/setup-node@v1
       with:
