--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "types": ["@league-of-foundry-developers/foundry-vtt-types"],
+    "target": "es5",
+    "module": "es2015",
     "moduleResolution": "node",
     "strictNullChecks": true,
     "outDir": "scripts",
