Added HM3 system typescript definition files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-10"
+    "@league-of-foundry-developers/foundry-vtt-types": "^9"
   }
 }
