--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: hm3-automation CI
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   build:
@@ -24,11 +24,22 @@ jobs:
       run: tsc
     - name: Create module
       run: zip -r ./module.zip module.json LICENSE README.md lang/ templates/ scripts/ packs/ icons
+    - name: Close the Beta Release
+      id: create_beta_release
+      uses: ncipollo/release-action@v1
+      with:
+        allowUpdates: true
+        name: Beta
+        draft: false
+        prerelease: true
+        token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: './module.json,./module.zip'
+        tag: beta
     - name: Create Release
       id: create_versioned_release
       uses: ncipollo/release-action@v1
       with:
-        allowUpdates: true
+        allowUpdates: false
         name: Release ${{ steps.set-version.outputs.version }}
         draft: false
         prerelease: false
