--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Create module
       run: zip -r ./module.zip module.json LICENSE README.md lang/ templates/ scripts/ packs/ icons
     - name: Close the Beta Release
-      id: create_beta_release
+      id: close_beta_release
       uses: ncipollo/release-action@v1
       with:
         allowUpdates: true
